<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  <TextView android:id="@+id/totalLabel"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:text="@string/message_total"
      android:background="#E1F7F5"
      android:textColor="#000000"
      android:textStyle="bold"
      android:padding="5dp"/>
  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/totalLabel"
      android:padding="10dp">
    <TextView android:id="@+id/distancePerVolumeLabel"
        android:text="@string/label_distancePerVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/distancePerVolume"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/distancePerVolumeLabel" />
    <TextView android:id="@+id/distanceLabel"
        android:text="@string/label_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distancePerVolumeLabel" />
    <TextView android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distancePerVolumeLabel"
        android:layout_toRightOf="@id/distanceLabel" />
  </RelativeLayout>
</RelativeLayout>
